# office-hours-tutorbench-lab

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  eval_parity.md  eval_protocol.md  experiment_log.md
eval_sets/: heldout500.json  heldout_failure_probe_v6.json  heldout_v11_failure_probe.json  heldout_v8_regression_probe.json  office_hours_dev10.json  office_hours_dev50.json  validation150.json  validation_failure_probe_v5.json  validation_failure_probe_v5_repair3.json
runs/01948cbf-7bd5-47f5-9f09-c7e99a1ea830/: scores.json
runs/03aea9ce-4f10-4716-ba34-a8b912a6be44/: compare-baseline.md  scores.json
runs/03f7c0b5-0575-4a1a-8365-ab857a068dbd/: scores.json
runs/08e7707a-e7ee-4a4f-a608-63aea18b29a1/: analysis.json  analysis.md  compare-validation150-baseline.md  redacted_traces.jsonl  scores.json
runs/100c24c3-4835-4d11-b6fc-3c2fa49b221e/: scores.json
runs/1170cf4a-63a2-4b37-b440-ec357d926934/: compare-playbook.md  compare-visual-probe.md  report.md  scores.json
runs/20467be7-d40c-458c-97e4-e144d3e0f400/: scores.json
runs/20890529-22dc-4eb1-b3e5-3fa8861ff669/: scores.json
runs/2496d49c-f245-4d8d-9a69-9bdd49b19777/: scores.json
runs/2ddb82f0-4947-46e6-be98-f8fa4901eacd/: analysis.json  analysis.md  compare-baseline.md  scores.json
tests/: conftest.py  test_blend.py  test_dataset_manifest.py  test_doctor.py  test_eval_sets.py  test_numeric_probe.py  test_parity.py  test_protocol.py  test_redaction.py  test_response_selector.py  test_run_analysis.py  test_scoring.py  test_selection.py  test_tutor_architecture.py
(+258 files in other folders)
